add stats
